--- a/transformerModel.ipynb
+++ b/transformerModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "1da0776e-60d2-4b1d-b0da-0de7f5051116",
    "metadata": {},
    "outputs": [],
@@ -28,19 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "1ae04c4d-2422-440c-a04d-b2c3ec99a622",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"''uniTimex\""
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                transDate  transDateUnix\n",
+      "0     2019-01-01 04:28:00     1546316880\n",
+      "1     2019-01-01 04:28:00     1546316880\n",
+      "2     2019-01-01 04:29:00     1546316940\n",
+      "3     2019-01-01 04:29:00     1546316940\n",
+      "4     2019-01-01 04:32:00     1546317120\n",
+      "...                   ...            ...\n",
+      "58914 2019-09-23 14:58:00     1569250680\n",
+      "58915 2019-09-23 15:00:00     1569250800\n",
+      "58916 2019-09-23 15:00:00     1569250800\n",
+      "58917 2019-09-23 15:00:00     1569250800\n",
+      "58918 2019-09-23 15:00:00     1569250800\n",
+      "\n",
+      "[58919 rows x 2 columns]\n"
+     ]
     }
    ],
    "source": [
@@ -58,8 +68,13 @@
     "# Removing firstName, lastName, transNum, transDate\n",
     "df.drop(['firstName', 'lastName', 'transNum', 'unixTime'], axis=1, inplace=True)\n",
     "\n",
-    "# Converting transDate into unixTime\n",
-    "df.x"
+    "# Convert 'transDate' column to datetime format\n",
+    "df['transDate'] = pd.to_datetime(df['transDate'], format='%Y-%m-%d %H:%M')\n",
+    "\n",
+    "# Convert 'transDate' to Unix time (seconds since Epoch)\n",
+    "df['unixTime'] = df['unitTime'].astype('int64') // 10**9\n",
+    "\n",
+    "print(df[['transDate', 'unixTime']])"
    ]
   },
   {
@@ -846,6 +861,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5a49930",
    "metadata": {},
    "source": [
     "## Adding distance between transactions"
@@ -854,6 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "fabc2be8",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
