--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2028,7 +2028,7 @@
    "id": "40fbc38c-c934-4d22-9335-3b59ab03eefe",
    "metadata": {},
    "source": [
-    "# 7. Datasets"
+    "# 7. Model Creation"
    ]
   },
   {
