--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "4e8ec6a3-d4be-471d-8839-fb3bf6e76301",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,9 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, accuracy_score, f1_score\n"
    ]
   },
   {
@@ -18,67 +20,98 @@
    "execution_count": 2,
    "id": "91a65714-434a-48ea-b8fe-a99800d55edf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2137, 11)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train = pd.read_csv(\"./data/X_train.csv\")\n",
     "X_test = pd.read_csv(\"./data/X_test.csv\")\n",
     "y_train =  pd.read_csv(\"./data/y_train.csv\")\n",
-    "y_test = pd.read_csv(\"./data/y_test.csv\")"
+    "y_test = pd.read_csv(\"./data/y_test.csv\")\n",
+    "\n",
+    "X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bb67045-882a-43e7-bf06-7d523a885890",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "model = RandomForestClassifier()\n",
-    "model.fit(X_train, y_train)"
+    "model.fit(X_train, y_train['isFraud'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e819940a-61b7-4270-89e2-d0b8e94e23f0",
+   "execution_count": 14,
+   "id": "64c6ba3e-8303-4be2-8f80-5b65cdde69c0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/2j/0_wrpd3n1xs8vhzsjgsnfdhm0000gn/T/ipykernel_5169/1330346107.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'objective'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'multi:softprob'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'num_class'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mbst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[273   8]\n",
+      " [  8 246]]\n",
+      "Precision: 0.968503937007874\n",
+      "Recall: 0.968503937007874\n",
+      "Accuracy: 0.9700934579439252\n",
+      "F1 Score: 0.968503937007874\n"
      ]
     }
    ],
    "source": [
-    "import xgboost as xgb\n",
+    "# Make predictions on the testing data\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
-    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "params = {'objective': 'multi:softprob', 'num_class': 3}\n",
-    "bst = xgb.train(params, dtrain)"
+    "# Generate the confusion matrix\n",
+    "cm = confusion_matrix(y_test['isFraud'], y_pred)\n",
+    "\n",
+    "# Calculate precision, recall, and accuracy\n",
+    "precision = precision_score(y_test['isFraud'], y_pred, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "recall = recall_score(y_test['isFraud'], y_pred, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "accuracy = accuracy_score(y_test['isFraud'], y_pred)\n",
+    "f1 = f1_score(y_test['isFraud'], y_pred, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "\n",
+    "\n",
+    "# Print the confusion matrix and the calculated metrics\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm)\n",
+    "print(f\"Precision: {precision}\")\n",
+    "print(f\"Recall: {recall}\")\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "print(f\"F1 Score: {f1}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "740de755-9673-46f1-ba50-5252cebfe8c4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install xgboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64c6ba3e-8303-4be2-8f80-5b65cdde69c0",
+   "id": "20c1bffe-0627-4655-9537-91fa348a9394",
    "metadata": {},
    "outputs": [],
    "source": []
