--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "82f6e467-c86a-4239-b32a-43e3d2f51ef9",
    "metadata": {},
    "outputs": [],
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "70569123-e461-494b-b943-6473d8919421",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "id": "f6e7fa21-20a1-4a6c-a1a5-e0f3004cd922",
    "metadata": {},
    "outputs": [
@@ -1601,11 +1601,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of selected features: 14\n",
-      "Index(['amount', 'gender', 'cityPop', 'unixTime', 'merchLatitude',\n",
-      "       'merchLongitude', 'age', 'category_food_dining',\n",
-      "       'category_gas_transport', 'category_grocery_pos', 'category_home',\n",
-      "       'category_misc_net', 'category_shopping_net', 'distance_between'],\n",
+      "Number of selected features: 10\n",
+      "Index(['amount', 'cityPop', 'unixTime', 'merchLatitude', 'merchLongitude',\n",
+      "       'age', 'category_gas_transport', 'category_grocery_pos',\n",
+      "       'category_shopping_net', 'distance_between'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -1617,7 +1616,7 @@
     "\n",
     "# Fit the RandomForestClassifier\n",
     "sel = RandomForestClassifier(n_estimators=100)\n",
-    "sel.fit(X_over_train, y_over_train)\n",
+    "sel.fit(X_under_train, y_under_train)\n",
     "\n",
     "# Get the importances of features\n",
     "importances = sel.feature_importances_\n",
@@ -1627,13 +1626,13 @@
     "\n",
     "# Create the SelectFromModel object with your defined threshold\n",
     "selection = SelectFromModel(sel, threshold=threshold_value)\n",
-    "selection.fit(X_over_train, y_over_train)\n",
+    "selection.fit(X_under_train, y_under_train)\n",
     "\n",
     "# Get the boolean mask of the selected features\n",
     "selected_features_mask = selection.get_support()\n",
     "\n",
     "# Get the names of the selected features\n",
-    "selected_features = X_over_train.columns[selected_features_mask]\n",
+    "selected_features = X_under_train.columns[selected_features_mask]\n",
     "\n",
     "# Count and print the selected features\n",
     "print(f\"Number of selected features: {selected_features.shape[0]}\")\n",
@@ -1650,56 +1649,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "id": "a22c1dec-a75a-4927-a333-28006e442e2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# List of columns to keep\n",
-    "columns_to_keep = ['amount', 'gender', 'cityPop', 'unixTime', 'merchLatitude',\n",
-    "                   'merchLongitude', 'age', 'category_food_dining',\n",
-    "                   'category_gas_transport', 'category_grocery_pos', 'category_home',\n",
-    "                   'category_misc_net', 'category_shopping_net', 'distance_between']\n",
+    "columns_to_keep = ['amount', 'cityPop', 'unixTime', 'merchLatitude', 'merchLongitude',\n",
+    "       'age', 'category_gas_transport', 'category_grocery_pos',\n",
+    "       'category_shopping_net', 'distance_between']\n",
     "\n",
     "# Create a new DataFrame with only the specified columns\n",
-    "X_over_train = X_over_train[columns_to_keep]\n",
-    "X_over_test = X_over_test[columns_to_keep]"
+    "X_under_train = X_under_train[columns_to_keep]\n",
+    "X_under_test = X_under_test[columns_to_keep]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "e9f09253-64cc-46a6-ba46-c29d3fd34a30",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(288777,)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_over_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "32b42eed-a017-4c92-a9c4-dd38933c074a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_over_train.to_csv(\"X_train.csv\")\n",
-    "y_over_train.to_csv(\"y_train.csv\")\n",
-    "X_over_test.to_csv(\"X_test.csv\")\n",
-    "y_over_test.to_csv(\"y_test.csv\")"
+    "X_under_train.to_csv(\"./data/X_train.csv\")\n",
+    "y_under_train.to_csv(\"./data/y_train.csv\")\n",
+    "X_under_test.to_csv(\"./data/X_test.csv\")\n",
+    "y_under_test.to_csv(\"./data/y_test.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6decd3-710a-43de-a577-924b55929657",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
