--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "4e8ec6a3-d4be-471d-8839-fb3bf6e76301",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,18 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, accuracy_score, f1_score\n"
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, accuracy_score, f1_score\n",
+    "from sklearn.linear_model import LogisticRegression, RidgeClassifier\n",
+    "# from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "91a65714-434a-48ea-b8fe-a99800d55edf",
    "metadata": {},
    "outputs": [
@@ -27,7 +33,7 @@
        "(2137, 11)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,31 +49,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "8bb67045-882a-43e7-bf06-7d523a885890",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-6 {color: black;background-color: white;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
     "model = RandomForestClassifier()\n",
     "model.fit(X_train, y_train['isFraud'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "id": "64c6ba3e-8303-4be2-8f80-5b65cdde69c0",
    "metadata": {},
    "outputs": [
@@ -76,12 +83,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[273   8]\n",
+      "[[274   7]\n",
       " [  8 246]]\n",
-      "Precision: 0.968503937007874\n",
+      "Precision: 0.9723320158102767\n",
       "Recall: 0.968503937007874\n",
-      "Accuracy: 0.9700934579439252\n",
-      "F1 Score: 0.968503937007874\n"
+      "Accuracy: 0.9719626168224299\n",
+      "F1 Score: 0.9704142011834319\n"
      ]
     }
    ],
@@ -110,11 +117,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "20c1bffe-0627-4655-9537-91fa348a9394",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9644859813084112\n",
+      "Precision: 0.9835390946502057\n",
+      "Recall: 0.9409448818897638\n",
+      "F1 Score: 0.9617706237424547\n",
+      "Confusion Matrix:\n",
+      " [[277   4]\n",
+      " [ 15 239]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Correctly format y_train if it's not already a Series\n",
+    "y_train_series = y_train['isFraud'].squeeze()\n",
+    "\n",
+    "# Initialize and fit the logistic regression model\n",
+    "# lr = LogisticRegression(random_state=42) # 57% accuracy\n",
+    "# lr = RidgeClassifier() # 70% accuracy\n",
+    "# lr = DecisionTreeClassifier(random_state=42) # 93% accuracy\n",
+    "# lr = KNeighborsClassifier() # 77% accuracy\n",
+    "lr = GradientBoostingClassifier(random_state=42) # 96% accuracy\n",
+    "lr.fit(X_train, y_train_series)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = lr.predict(X_test)\n",
+    "\n",
+    "# Correctly format y_test to ensure it's a Series\n",
+    "y_test_series = y_test['isFraud'].squeeze()\n",
+    "\n",
+    "# Evaluate the model's performance\n",
+    "print('Accuracy:', accuracy_score(y_test_series, y_pred))\n",
+    "print('Precision:', precision_score(y_test_series, y_pred, zero_division=0))\n",
+    "print('Recall:', recall_score(y_test_series, y_pred))\n",
+    "print('F1 Score:', f1_score(y_test_series, y_pred))\n",
+    "print('Confusion Matrix:\\n', confusion_matrix(y_test_series, y_pred))"
+   ]
   }
  ],
  "metadata": {
