--- a/Model.ipynb
+++ b/Model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "91a65714-434a-48ea-b8fe-a99800d55edf",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "(2137, 11)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "8bb67045-882a-43e7-bf06-7d523a885890",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "64c6ba3e-8303-4be2-8f80-5b65cdde69c0",
    "metadata": {},
    "outputs": [
@@ -77,11 +77,11 @@
      "text": [
       "Confusion Matrix:\n",
       "[[273   8]\n",
-      " [  8 246]]\n",
-      "Precision: 0.968503937007874\n",
-      "Recall: 0.968503937007874\n",
-      "Accuracy: 0.9700934579439252\n",
-      "F1 Score: 0.968503937007874\n"
+      " [  7 247]]\n",
+      "Precision: 0.9686274509803922\n",
+      "Recall: 0.9724409448818898\n",
+      "Accuracy: 0.9719626168224299\n",
+      "F1 Score: 0.9705304518664046\n"
      ]
     }
    ],
@@ -100,18 +100,339 @@
     "\n",
     "\n",
     "# Print the confusion matrix and the calculated metrics\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(cm)\n",
-    "print(f\"Precision: {precision}\")\n",
-    "print(f\"Recall: {recall}\")\n",
-    "print(f\"Accuracy: {accuracy}\")\n",
-    "print(f\"F1 Score: {f1}\")"
+    "def runCM(cm, precision, recall, accuracy, f1):\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(cm)\n",
+    "    print(f\"Precision: {precision}\")\n",
+    "    print(f\"Recall: {recall}\")\n",
+    "    print(f\"Accuracy: {accuracy}\")\n",
+    "    print(f\"F1 Score: {f1}\")\n",
+    "\n",
+    "runCM(CM, precision, recall, accuracy, f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c3cd66-e1c9-42c6-a127-71a85456dc54",
+   "metadata": {},
+   "source": [
+    "# Additional Testing on Entire Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "56091fd9-f163-4725-b241-f1677320b933",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>cityPop</th>\n",
+       "      <th>unixTime</th>\n",
+       "      <th>merchLatitude</th>\n",
+       "      <th>merchLongitude</th>\n",
+       "      <th>age</th>\n",
+       "      <th>category_gas_transport</th>\n",
+       "      <th>category_grocery_pos</th>\n",
+       "      <th>category_shopping_net</th>\n",
+       "      <th>distance_between</th>\n",
+       "      <th>isFraud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000032</td>\n",
+       "      <td>4.143563e-05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.440700</td>\n",
+       "      <td>0.772111</td>\n",
+       "      <td>0.7375</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.572049</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>4.925612e-06</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.390349</td>\n",
+       "      <td>0.842510</td>\n",
+       "      <td>0.9750</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.298690</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000178</td>\n",
+       "      <td>2.080114e-06</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.420541</td>\n",
+       "      <td>0.448314</td>\n",
+       "      <td>0.6250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.823143</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000074</td>\n",
+       "      <td>1.871486e-05</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.509176</td>\n",
+       "      <td>0.725492</td>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.507048</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.001002</td>\n",
+       "      <td>1.188196e-05</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>0.423723</td>\n",
+       "      <td>0.885317</td>\n",
+       "      <td>0.4875</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.358400</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181817</th>\n",
+       "      <td>181817</td>\n",
+       "      <td>0.000566</td>\n",
+       "      <td>2.660448e-04</td>\n",
+       "      <td>0.999998</td>\n",
+       "      <td>0.412495</td>\n",
+       "      <td>0.892959</td>\n",
+       "      <td>0.6750</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.227643</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181818</th>\n",
+       "      <td>181818</td>\n",
+       "      <td>0.000058</td>\n",
+       "      <td>7.662253e-03</td>\n",
+       "      <td>0.999998</td>\n",
+       "      <td>0.305187</td>\n",
+       "      <td>0.496819</td>\n",
+       "      <td>0.5625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.419812</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181819</th>\n",
+       "      <td>181819</td>\n",
+       "      <td>0.000359</td>\n",
+       "      <td>6.172446e-07</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.449861</td>\n",
+       "      <td>0.599924</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.627880</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181820</th>\n",
+       "      <td>181820</td>\n",
+       "      <td>0.000092</td>\n",
+       "      <td>5.865985e-04</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.277880</td>\n",
+       "      <td>0.694989</td>\n",
+       "      <td>0.2125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500155</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181821</th>\n",
+       "      <td>181821</td>\n",
+       "      <td>0.000069</td>\n",
+       "      <td>6.354534e-05</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.237712</td>\n",
+       "      <td>0.845189</td>\n",
+       "      <td>0.0875</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.751359</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>181822 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0    amount       cityPop  unixTime  merchLatitude  \\\n",
+       "0                0  0.000032  4.143563e-05  0.000000       0.440700   \n",
+       "1                1  0.000021  4.925612e-06  0.000000       0.390349   \n",
+       "2                2  0.000178  2.080114e-06  0.000002       0.420541   \n",
+       "3                3  0.000074  1.871486e-05  0.000002       0.509176   \n",
+       "4                4  0.001002  1.188196e-05  0.000008       0.423723   \n",
+       "...            ...       ...           ...       ...            ...   \n",
+       "181817      181817  0.000566  2.660448e-04  0.999998       0.412495   \n",
+       "181818      181818  0.000058  7.662253e-03  0.999998       0.305187   \n",
+       "181819      181819  0.000359  6.172446e-07  1.000000       0.449861   \n",
+       "181820      181820  0.000092  5.865985e-04  1.000000       0.277880   \n",
+       "181821      181821  0.000069  6.354534e-05  1.000000       0.237712   \n",
+       "\n",
+       "        merchLongitude     age  category_gas_transport  category_grocery_pos  \\\n",
+       "0             0.772111  0.7375                       0                     0   \n",
+       "1             0.842510  0.9750                       0                     0   \n",
+       "2             0.448314  0.6250                       0                     0   \n",
+       "3             0.725492  0.5000                       0                     0   \n",
+       "4             0.885317  0.4875                       0                     1   \n",
+       "...                ...     ...                     ...                   ...   \n",
+       "181817        0.892959  0.6750                       0                     0   \n",
+       "181818        0.496819  0.5625                       0                     0   \n",
+       "181819        0.599924  0.3750                       0                     0   \n",
+       "181820        0.694989  0.2125                       0                     0   \n",
+       "181821        0.845189  0.0875                       0                     0   \n",
+       "\n",
+       "        category_shopping_net  distance_between  isFraud  \n",
+       "0                           0          0.572049        0  \n",
+       "1                           1          0.298690        0  \n",
+       "2                           0          0.823143        0  \n",
+       "3                           0          0.507048        0  \n",
+       "4                           0          0.358400        0  \n",
+       "...                       ...               ...      ...  \n",
+       "181817                      0          0.227643        0  \n",
+       "181818                      0          0.419812        0  \n",
+       "181819                      0          0.627880        0  \n",
+       "181820                      0          0.500155        0  \n",
+       "181821                      0          0.751359        0  \n",
+       "\n",
+       "[181822 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataSet =  pd.read_csv(\"./data/data.csv\")\n",
+    "dataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c6e42775-21d5-4837-8dec-73c325c23b15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[175019   5467]\n",
+      " [     7   1329]]\n",
+      "Precision: 0.1955562095350206\n",
+      "Recall: 0.9947604790419161\n",
+      "Accuracy: 0.969893632233723\n",
+      "F1 Score: 0.32685686178061973\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred2 = model.predict(dataSet.drop([\"isFraud\"], axis=1))\n",
+    "\n",
+    "# Generate the confusion matrix\n",
+    "cm = confusion_matrix(dataSet[\"isFraud\"], y_pred2)\n",
+    "\n",
+    "# Calculate precision, recall, and accuracy\n",
+    "precision = precision_score(dataSet[\"isFraud\"], y_pred2, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "recall = recall_score(dataSet[\"isFraud\"], y_pred2, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "accuracy = accuracy_score(dataSet[\"isFraud\"], y_pred2)\n",
+    "f1 = f1_score(dataSet[\"isFraud\"], y_pred2, average='binary')  # Adjust 'binary' if you have multi-class classification\n",
+    "\n",
+    "\n",
+    "# Print the confusion matrix and the calculated metrics\n",
+    "def runCM(cm, precision, recall, accuracy, f1):\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(cm)\n",
+    "    print(f\"Precision: {precision}\")\n",
+    "    print(f\"Recall: {recall}\")\n",
+    "    print(f\"Accuracy: {accuracy}\")\n",
+    "    print(f\"F1 Score: {f1}\")\n",
+    "\n",
+    "runCM(cm, precision, recall, accuracy, f1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20c1bffe-0627-4655-9537-91fa348a9394",
+   "id": "860b6e76-62d1-4121-a56b-34d905444145",
    "metadata": {},
    "outputs": [],
    "source": []
